recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:7: error: not found: value occurences
    return 1 + occurences(l.tail, v);
               ^Occurrences:10: error: not found: value occurences
    return 0 + occurences(l.tail, v);
               ^